less/pages/_contact.less
#content.contact {

	#about_me_container {
		width: 860px;
		height: 367px;
		background: url("/@{stylesheetDirectory}/images/about_jimmy_widescreen.jpg");
		position: relative;

		.container {
			padding: 20px;
		}
	}

	.contact_info {
		position: absolute;
		left: 10px;
		bottom: 10px;
		width: 215px;
		text-align: justify;
		border: 1px solid #888;
		padding: 5px;
		.border-radius(1px);
		background-color: #f9f9f9;

		ul {
			margin: 0px;
			padding: 0px;

			li {
				list-style-type: none;
				padding: 0px;
				margin: 3px 0px;
				line-height: 20px;
				vertical-align: middle;
				font-size: 13px;

				&.first { margin-top: 0px; }
				img { border: 0px solid black; vertical-align: middle; width: 16px; height: 16px; }

				i {
					color: #888;
					vertical-align: middle;
					text-align: center;
					float: left;
					display: block;
					font-size: 15px;
				}

				a {
					color: #369;
					text-decoration: underline;

					&:hover {
						text-decoration: none;
					}
				}
			}
		}
	}

	.bio {
		position: absolute;
		right: 10px;
		top: 10px;
		bottom: 10px;
		width: 300px;
		background-color: #282828;
		.transparent(90);
		color: #F9F9F9;

		.padding {
			border: 1px solid #222;
			.border-radius(1px);
			padding: 10px;
		}

		p {
			margin-bottom: 1em;
			line-height: 1.25em;
		}

		a {
			color: #d9d9d9;
		}

		h2 {
			font-family: @headerFont !important;
			font-size: 150%;
			text-decoration: none;
			font-weight: bold;
		}
	}
}

